--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1 user-scalable=no, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Simple Calculator Harsh Trivedi</title>
+	<title>Simple Calculator</title>
 	<link rel="stylesheet" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -27,7 +27,7 @@
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Simple JavaScript Calculator" />
     <meta property="og:description"
-        content="Simple JavaScript Calculator by Harsh Trivedi" />
+        content="Simple JavaScript Calculator" />
     <meta property="og:image"
         content="https://raw.github.com/harsh98trivedi/Simple-JavaScript-Calculator/master/meta.jpg" />
     <meta property="og:url" content="https://harsh98trivedi.github.io/Simple-JavaScript-Calculator/" />
@@ -35,11 +35,10 @@
     <meta property="og:locale" content="en_US" />
     <meta property="fb:admins" content="245221532650178" />
     <meta property="og:type" content="website" />
-    <meta content='https://www.facebook.com/TheHarshTrivedi' property='article:author' />
     <meta property="og:url" content="https://harsh98trivedi.github.io/Simple-JavaScript-Calculator/" />
     <!-- Search Engine -->
     <meta property="description"
-        content="Simple JavaScript Calculator by Harsh Trivedi" />
+        content="Simple JavaScript Calculator" />
     <meta property="image"
         content="https://raw.github.com/harsh98trivedi/Simple-JavaScript-Calculator/master/meta.jpg" />
     <!-- Schema.org for Google -->
@@ -100,7 +99,7 @@
 			</table>
 			<hr style="max-width: 50vw;">
 			<div style="font-size:1rem; display: flex; align-items: center; justify-content: center;">Made with <img style="margin: 0.15rem;" src="heart.png">by<a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;"
-                target="_blank" href="https://harsh98trivedi.github.io">Harsh Trivedi</a></div>
+                target="_blank" href="https://harsh98trivedi.github.io"></a></div>
 		</div>
 	</div>
     <div id="turn">
