--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 				</tr>
 			</table>
 			<hr style="max-width: 50vw;">
-			<div style="font-size:1rem; display: flex; align-items: center; justify-content: center;">Made with <img style="margin: 0.15rem;" src="heart.png">by<a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;"
-                target="_blank" href="https://harsh98trivedi.github.io"></a></div>
+			<div style="font-size:1rem; display: flex; align-items: center; justify-content: center;">Made with ❤️ by <a href="https://skriponux.com"
+                target="_blank"> </div>
 		</div>
 	</div>
     <div id="turn">
